--- a/admins/menu/assets/styles/styles.css
+++ b/admins/menu/assets/styles/styles.css
@@ -34,7 +34,7 @@ html {
     flex-direction: column;
     width: 50px;
     height: 50px;
-    /* background-color: white; */
+    background-color: #444; 
     color: white !important;
     border-radius: 50%;
     transition: transform 250ms ease;
